--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://clcanny.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
 # Directory
-source_dir: ../source
+source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
@@ -33,7 +33,8 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link: # Open external links in new tab
+  enable: true
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -44,7 +45,18 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
+markdown:
+  preset: 'default'
+  render:
+    html: true
+    xhtmlOut: false
+    langPrefix: 'language-'
+    breaks: true
+    linkify: true
+    typographer: true
+    quotes: '“”‘’'
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -53,7 +65,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
