--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,12 @@ root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
+sitemap:
+  path: sitemap.xml
+  rel: false
+  tags: true
+  categories: true
+
 # Directory
 source_dir: source
 public_dir: public
