--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-renderer-markdown-it": "^5.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
+    "hexo-symbols-count-time": "^0.7.1",
     "hexo-server": "^2.0.0"
   }
 }
