--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ symbols_count_time:
   time: true
   total_symbols: true
   total_time: true
-  exclude_codeblock: false
+  exclude_codeblock: true
   awl: 2
   wpm: 300
   suffix: "mins."
