--- a/_config.next.yml
+++ b/_config.next.yml
@@ -8,5 +8,10 @@ toc:
   expand_all: true
   max_depth: 5
 
+menu:
+  home: / || fa fa-home
+  archives: /archives/ || fa fa-archive
+  tags: /tags/ || fa fa-tags
+
 custom_file_path:
   style: styles.styl
