(modify) (source/_posts/*, etc.) (Migrate from tags to hierarchical categories.)

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -11,7 +11,7 @@ toc:
 menu:
   home: / || fa fa-home
   archives: /archives/ || fa fa-archive
-  tags: /tags/ || fa fa-tags
+  categories: /categories/ || fa fa-th
 
 codeblock:
   copy_button:
