--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,9 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://clcanny.github.io
 root: /
-permalink: :year/:month/:day/:title/
+## How to generate id on Mac?
+## echo $RANDOM | md5
+permalink: :id/
 permalink_defaults:
 
 sitemap:
