(modify) (_config.next.yml) (Set text-align to start.)

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -18,5 +18,9 @@ codeblock:
     enable: true
     show_result: true
 
+text_align:
+  desktop: start
+  mobile: start
+
 custom_file_path:
   style: styles.styl
