--- a/_config.next.yml
+++ b/_config.next.yml
@@ -18,6 +18,12 @@ codeblock:
     enable: true
     show_result: true
 
+math:
+  mathjax:
+    enable: true
+    # https://mhchem.github.io/MathJax-mhchem/
+    mhchem: true
+
 text_align:
   desktop: start
   mobile: start
