--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-generator-sitemap": "^2.1.0",
-    "hexo-renderer-markdown-it": "^5.0.0",
+    "hexo-renderer-pandoc": "^0.3.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-symbols-count-time": "^0.7.1",
