--- a/_config.next.yml
+++ b/_config.next.yml
@@ -24,6 +24,9 @@ math:
     # https://mhchem.github.io/MathJax-mhchem/
     mhchem: true
 
+mermaid:
+  enable: true
+
 text_align:
   desktop: start
   mobile: start
