--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
+  exclude_languages:
+    - mermaid
 
 markdown:
   preset: 'default'
