--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-renderer-pandoc": "^0.3.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-symbols-count-time": "^0.7.1",
     "hexo-server": "^2.0.0"
   }
