--- a/_config.yml
+++ b/_config.yml
@@ -1,77 +1,20 @@
 # Hexo Configuration
-# Please copy config file to blog/_config.yml
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
 title: On The Road
 subtitle:
-description: a programmer's blog
+description:
 keywords:
 author: JunBin
-language: zh-Hans
+language: zh-CN
 timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://clcanny.github.io
 root: /
-## How to generate id on Mac?
-## echo $RANDOM | md5
-permalink: :id/
-permalink_defaults:
-
-sitemap:
-  path: sitemap.xml
-  rel: false
-  tags: true
-  categories: true
-
-# Directory
-source_dir: source
-public_dir: public
-tag_dir: tags
-archive_dir: archives
-category_dir: categories
-code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
-
-# Writing
-new_post_name: :title.md # File name of new posts
-default_layout: post
-titlecase: false # Transform title into titlecase
-external_link: # Open external links in new tab
-  enable: true
-filename_case: 0
-render_drafts: false
-post_asset_folder: false
-relative_link: false
-future: true
-highlight:
-  enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace:
-  exclude_languages:
-    - mermaid
-
-markdown:
-  preset: 'default'
-  render:
-    html: true
-    xhtmlOut: false
-    langPrefix: 'language-'
-    breaks: true
-    linkify: true
-    typographer: false
-    # quotes: '“”‘’'
-    # https://github.com/hexojs/hexo/issues/3535
-    # smartypants: false
-  anchors:
-    # https://github.com/bubkoo/hexo-toc/issues/20
-    # Minimum level for ID creation. (Ex. h2 to h6)
-    level: 1
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -87,22 +30,11 @@ default_category: uncategorized
 category_map:
 tag_map:
 
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
-time_format: HH:mm:ss
-
-# Pagination
-## Set per_page to 0 to disable pagination
-per_page: 10
-pagination_dir: page
-
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
-theme: next
+sitemap:
+  path: sitemap.xml
+  rel: false
+  tags: true
+  categories: true
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -110,3 +42,8 @@ deploy:
   type: git
   repo: https://github.com/Clcanny/Clcanny.github.io.git
   branch: master
+
+# Extensions
+## Plugins: https://hexo.io/plugins/
+## Themes: https://hexo.io/themes/
+theme: fluid
