--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ timezone: Asia/Shanghai
 url: https://clcanny.github.io
 root: /
 
+# From plugin hexojs/hexo-generator-index.
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -24,11 +25,6 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-
-# Category & Tag
-default_category: uncategorized
-category_map:
-tag_map:
 
 sitemap:
   path: sitemap.xml
